Use list expressions instead of S1, S2, ... S10.
For convenience, define Str@ and Str aliases. Otherwise 'S' conflicts with the
character S when defining string literals.

Note: the test is failing do to a memory leak I need to track down.

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,6 +1,10 @@
-* [lang] Test and implement lists and literals.
- - Compile LIST_EXPR. Treat list elements as variables accessed directly with
-   VAR_INSTR.
+* [prgm] Switch to using list expression
+ - Figure out memory leak
+ - For T(...)
+* [lang] Test and implement literals
+* [prgm] Switch to using literals
+ - For strings in testing
+ - For integers in md5 and elsewhere
 
 * [prgm] TicTacToe cleanup
  - Switch to using shared modules.
