Use list expression for UBNat tests.
Rather than thread the list through the test constructors.

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,9 +1,8 @@
-* [prgm] Switch to using list expression
- - For T(...)
 * [lang] Test and implement literals
 * [prgm] Switch to using literals
  - For strings in testing
  - For integers in md5 and elsewhere
+* [lang] Document and test that variable declarations shadow other variables.
 
 * [prgm] TicTacToe cleanup
  - Switch to using shared modules.
