Add test for literals.
They currently fail because we don't support literals yet.

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,4 +1,4 @@
-* [lang] Test and implement literals
+* [lang] Implement literals
 * [prgm] Switch to using literals
  - For strings in testing
  - For integers in md5 and elsewhere
