--- a/TODO.txt
+++ b/TODO.txt
@@ -1,5 +1,5 @@
 * [prgm] Switch to using literals
- - For integers in md5 and elsewhere
+ - For integers in md5, md5 tests, and elsewhere
 * [lang] Document and test that variable declarations shadow other variables.
 
 * [prgm] TicTacToe cleanup
@@ -11,6 +11,10 @@
 * [lang] Draft revision of type vs. normal name. Test and implement.
 * [prgm] Game of Life
 
+* [clean] Better error message at runtime in case of:
+      S@<Foo@> s = ...
+      S@<Foo@> s = s.cons.tail;
+  Currently we get a TaggedPop assertion error at runtime, which is no good.
 * [clean] PrintKind for <@>@ shows up as \<@; @>. Fix that.
 * [clean] Nicer way of printing error messages in compiler
  - particularly those that include names and types inside of them.
@@ -20,8 +24,8 @@
    proc_link, proc_exec
    poly_value, poly_apply
 * [prgm] Optimize Md5.cls function
-  - change cls to use or(x << n, x >> (K - n))
   - change << and >> to take number of bits to shift instead of a single bit.
+  - change cls to use or(x << n, x >> (K - n))
 * [prgm] Optimize the fble implementation of tictactoe
   - Using monadic operations where feasible?
 * [prgm] Implement game of life.
@@ -57,8 +61,6 @@
   exec processes.
 * Pick a better name for FbleChoice, which is used now for more than just
   conditional expressions. Maybe FbleNamedValue? NamedExpr?
-* Test what happens if you try to shadow variable names, and figure out what
-  ought to happen.
 * Better error message when the difference between a type is accidentally
   defining + vs. *, and it contains substituted polymorphic type variables.
 * Use consistent style for error messages. Capitalize? Punctuate?
