Resolve modules to names instead of indices.
So that we can refer to modules just like other variables.

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,7 +1,6 @@
 * [lang] Draft revision of spec for modules. Test and implement.
  - Add support for compiling a list of sorted modules.
-   - Add module ref as option in Vars data structure. Compile module ref just
-     like var, only looking for module ref in Vars instead of variable name.
+   - Compile module ref just like var.
    - Generate code for a program by doing...
      CompileExpr ; VPush ; CompileExpr ; VPush ; ... ; CompileExpr ; Descope.
  - Port all prgms to use modules.
