--- a/TODO.txt
+++ b/TODO.txt
@@ -1,5 +1,5 @@
 * [lang] Draft revision of spec for modules. Test and implement.
- - Port all prgms to use modules.
+ - Strip '_' off of all modules.
  - Remove 'include' support.
  - Remove struct eval support?
 
